(library
 (name bdcalc)
 (libraries camomile re)
 (modules Ast Lexer Parser Semantics Syntax))

(ocamllex (modules lexer))
(menhir (modules parser))

(executable
 (name repl)
 (libraries bdcalc)
 (modes (best exe) js)
 (modules Repl))

(test
 (name tests)
 (libraries alcotest bdcalc)
 (modules Tests))
